// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"collapse-direct-recursion" transform combined implementation can collapse the B function 1`] = `
"
- A (total: 4, self:—)
 - B (total: 3, self:—)
   - C (total: 1, self:1)
   - D (total: 1, self:1)
   - E (total: 1, self:1)
 - F (total: 1, self:1)"
`;

exports[`"collapse-direct-recursion" transform combined implementation starts as an unfiltered call tree 1`] = `
"
- A (total: 4, self:—)
 - B (total: 3, self:—)
   - B (total: 2, self:—)
     - B (total: 1, self:—)
       - C (total: 1, self:1)
     - D (total: 1, self:1)
   - E (total: 1, self:1)
 - F (total: 1, self:1)"
`;

exports[`"collapse-direct-recursion" transform filtered implementation can collapse the B function 1`] = `
"
- A.js (total: 5, self:—)
 - B.js (total: 4, self:1)
   - D.js (total: 1, self:1)
   - E.js (total: 1, self:1)
   - F.js (total: 1, self:1)
 - G.js (total: 1, self:1)"
`;

exports[`"collapse-direct-recursion" transform filtered implementation starts as an unfiltered call tree 1`] = `
"
- A.js (total: 5, self:—)
 - B.js (total: 4, self:—)
   - B.js (total: 3, self:—)
     - C.cpp (total: 3, self:1)
       - B.js (total: 1, self:—)
         - D.js (total: 1, self:1)
       - E.js (total: 1, self:1)
   - F.js (total: 1, self:1)
 - G.js (total: 1, self:1)"
`;

exports[`"collapse-resource" transform combined implementation can collapse the "firefox" library 1`] = `
"
- A (total: 2, self:—)
 - firefox (total: 2, self:—)
   - D (total: 1, self:1)
   - F (total: 1, self:1)"
`;

exports[`"collapse-resource" transform combined implementation starts as an unfiltered call tree 1`] = `
"
- A (total: 2, self:—)
 - B:firefox (total: 1, self:—)
   - C:firefox (total: 1, self:—)
     - D (total: 1, self:1)
 - E:firefox (total: 1, self:—)
   - F (total: 1, self:1)"
`;

exports[`"collapse-resource" transform specific implementation can collapse the "firefox" library as well as the C.js intermediate function 1`] = `
"
- A.js (total: 2, self:—)
 - firefox (total: 2, self:1)
   - F.cpp (total: 1, self:—)
     - G.js (total: 1, self:1)"
`;

exports[`"collapse-resource" transform specific implementation starts as an unfiltered call tree 1`] = `
"
- A.js (total: 2, self:—)
 - B.cpp:firefox (total: 1, self:—)
   - C.js (total: 1, self:—)
     - D.cpp:firefox (total: 1, self:—)
       - E.js (total: 1, self:—)
         - F.cpp (total: 1, self:—)
           - G.js (total: 1, self:1)
 - H.cpp:firefox (total: 1, self:—)
   - I.js (total: 1, self:1)"
`;

exports[`"focus-function" transform on a call tree can be focused on a function 1`] = `
"
- X (total: 3, self:—)
 - Y (total: 3, self:—)
   - X (total: 2, self:—)
     - Y (total: 2, self:—)
       - D (total: 2, self:2)
   - C (total: 1, self:1)"
`;

exports[`"focus-function" transform on a call tree starts as an unfiltered call tree 1`] = `
"
- A (total: 3, self:—)
 - B (total: 2, self:—)
   - X (total: 2, self:—)
     - Y (total: 2, self:—)
       - X (total: 2, self:—)
         - Y (total: 2, self:—)
           - D (total: 2, self:2)
 - X (total: 1, self:—)
   - Y (total: 1, self:—)
     - C (total: 1, self:1)"
`;

exports[`"focus-subtree" transform on a call tree can be filtered to a subtree 1`] = `
"
- C (total: 2, self:—)
 - D (total: 1, self:—)
   - E (total: 1, self:1)
 - F (total: 1, self:—)
   - G (total: 1, self:1)"
`;

exports[`"focus-subtree" transform on a call tree can remove the transform 1`] = `
"
- A (total: 3, self:—)
 - B (total: 3, self:—)
   - C (total: 2, self:—)
     - D (total: 1, self:—)
       - E (total: 1, self:1)
     - F (total: 1, self:—)
       - G (total: 1, self:1)
   - H (total: 1, self:—)
     - I (total: 1, self:1)"
`;

exports[`"focus-subtree" transform on a call tree starts as an unfiltered call tree 1`] = `
"
- A (total: 3, self:—)
 - B (total: 3, self:—)
   - C (total: 2, self:—)
     - D (total: 1, self:—)
       - E (total: 1, self:1)
     - F (total: 1, self:—)
       - G (total: 1, self:1)
   - H (total: 1, self:—)
     - I (total: 1, self:1)"
`;

exports[`"focus-subtree" transform on an inverted call tree can be filtered to a subtree 1`] = `
"
- X (total: 2, self:2)
 - B (total: 1, self:—)
   - A (total: 1, self:—)
 - C (total: 1, self:—)
   - B (total: 1, self:—)
     - A (total: 1, self:—)"
`;

exports[`"focus-subtree" transform on an inverted call tree can be un-inverted and keep the transform 1`] = `
"
- A (total: 2, self:—)
 - B (total: 2, self:—)
   - C (total: 1, self:—)
     - X (total: 1, self:1)
   - X (total: 1, self:1)"
`;

exports[`"focus-subtree" transform on an inverted call tree starts as an inverted call tree 1`] = `
"
- Z (total: 2, self:2)
 - Y (total: 2, self:—)
   - X (total: 2, self:—)
     - B (total: 1, self:—)
       - A (total: 1, self:—)
     - C (total: 1, self:—)
       - B (total: 1, self:—)
         - A (total: 1, self:—)
- E (total: 1, self:1)
 - D (total: 1, self:—)
   - C (total: 1, self:—)
     - B (total: 1, self:—)
       - A (total: 1, self:—)"
`;

exports[`"merge-call-node" transform on a JS call tree can merge a combined CallNodePath, and display a correct JS call tree 1`] = `
"
- onLoad.js (total: 3, self:—)
 - a.js (total: 2, self:—)
   - b.js (total: 2, self:2)
 - b.js (total: 1, self:1)"
`;

exports[`"merge-call-node" transform on a JS call tree can merge the node at JS path "onLoad" -> "A" 1`] = `
"
- onLoad.js (total: 3, self:—)
 - b.js (total: 3, self:3)"
`;

exports[`"merge-call-node" transform on a JS call tree can merge the node at JS path "onLoad" -> "A" on an combined call tree 1`] = `
"
- JS::RunScript.cpp (total: 3, self:—)
 - onLoad.js (total: 3, self:—)
   - js::jit::IonCannon.cpp (total: 2, self:—)
     - b.js (total: 2, self:2)
   - b.js (total: 1, self:1)"
`;

exports[`"merge-call-node" transform on a JS call tree has an untransformed JS only view 1`] = `
"
- onLoad.js (total: 3, self:—)
 - a.js (total: 3, self:—)
   - b.js (total: 3, self:3)"
`;

exports[`"merge-call-node" transform on a JS call tree starts as an untransformed call tree 1`] = `
"
- JS::RunScript.cpp (total: 3, self:—)
 - onLoad.js (total: 3, self:—)
   - js::jit::IonCannon.cpp (total: 2, self:—)
     - a.js (total: 2, self:—)
       - b.js (total: 2, self:2)
   - a.js (total: 1, self:—)
     - b.js (total: 1, self:1)"
`;

exports[`"merge-call-node" transform on a call tree call node [A, B, C] can be merged into [A, B] 1`] = `
"
- A (total: 3, self:—)
 - B (total: 3, self:—)
   - D (total: 1, self:—)
     - E (total: 1, self:1)
   - F (total: 1, self:—)
     - G (total: 1, self:1)
   - H (total: 1, self:—)
     - I (total: 1, self:1)"
`;

exports[`"merge-call-node" transform on a call tree starts as an unfiltered call tree 1`] = `
"
- A (total: 3, self:—)
 - B (total: 3, self:—)
   - C (total: 2, self:—)
     - D (total: 1, self:—)
       - E (total: 1, self:1)
     - F (total: 1, self:—)
       - G (total: 1, self:1)
   - H (total: 1, self:—)
     - I (total: 1, self:1)"
`;

exports[`"merge-function" transform on a call tree function C can be merged into callers 1`] = `
"
- A (total: 3, self:—)
 - B (total: 3, self:—)
   - D (total: 1, self:—)
     - E (total: 1, self:1)
   - F (total: 1, self:—)
     - G (total: 1, self:1)
   - H (total: 1, self:1)"
`;

exports[`"merge-function" transform on a call tree starts as an unfiltered call tree 1`] = `
"
- A (total: 3, self:—)
 - B (total: 3, self:—)
   - C (total: 2, self:—)
     - D (total: 1, self:—)
       - E (total: 1, self:1)
     - F (total: 1, self:—)
       - G (total: 1, self:1)
   - H (total: 1, self:—)
     - C (total: 1, self:1)"
`;
